# nhl-notifier

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
etc/: nhl-notifier@.service  nhl-notifier@.timer
src/: cli.rs  client.rs  config.rs  game.rs  main.rs  model.rs
stats_api/: Cargo.toml
stats_api/src/: client.rs  model.rs
twilio/: Cargo.toml
twilio/src/: client.rs  model.rs
