[package]
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
name = "async-std-test"
version = "0.1.0"


[dependencies]
failure = "0.1"
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

http = "0.1"
http-client = { version = "1.0", features = ["native_client"] }

futures-preview = "=0.3.0-alpha.19"
async-std = "1.0"