[package]
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
name = "nhl-notifier"
version = "0.1.0"

[workspace]

[dependencies]
stats-api = { path = "./stats_api" }
twilio = { path = "./twilio" }

failure = "0.1"
log = "0.4"
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] }
config = "0.9"
rust-ini = "0.13"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }

futures-preview = "=0.3.0-alpha.19"
async-std = "1.0"