[package]
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
name = "stats-api"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

http = "0.1"
http-client = { version = "1.0", features = ["native_client"] }

futures-preview = "=0.3.0-alpha.19"