[package]
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
name = "twilio"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6"
serde_json = "1.0"

http = "0.1"
curl = { version = "0.4", default-features=false, features = ["static-curl", "static-ssl", "http2"] }
http-client = { version = "1.0", features = ["native_client"] }

futures-preview = "=0.3.0-alpha.19"

log = "0.4"